[package]
name = "holy_crab_best_path"
version = "0.1.5"
edition = "2021"
publish = ["kellnr"]
authors = ["Davide Pedrotti", "Alessandro Fontana", "Pietro De Angeli", "Nicolas Torriglia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = { version = "0.1.21", registry = "kellnr" }
rand = "0.8.5"
strum = "0.25.0"

[registries]
kellnr = {index = "sparse+https://advancedprogramming.disi.unitn.it/api/v1/crates/", token = "6644802c53281b1859d729011fd51ba6"}
